tests/neg-custom-args/captures/capset-members3.scala
import caps.*

trait Foo:
  cap C _ // error

